--- a/css/styles.css
+++ b/css/styles.css
@@ -9,9 +9,8 @@ html{
 
 body {
     min-height: 100%;
-    background-color: #121314;
-    min-width: 1280px; /* Width minimo */
-    /**/
+    background-color: #101112;
+    min-width: 1280px;
 }
 
 a {
@@ -129,7 +128,7 @@ a {
     width: 800px;
     padding-top: 31px;
     z-index: 98;
-    margin-bottom: 31px; /* ehdb_b0.2 */
+    margin-bottom: 31px;
 }
 
 #contenedor tr {
@@ -148,17 +147,6 @@ caption {
     font-size: 10px;
     text-shadow: 1px 1px black;
     color: #adafb2;
-    /* Gradient */
-    /*
-    background: rgb(26,27,32) !important;
-    background: -moz-linear-gradient(top,  rgba(26,27,32,1) 0%, rgba(18,19,20,1) 100%) !important;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(26,27,32,1)), color-stop(100%,rgba(18,19,20,1))) !important;
-    background: -webkit-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: -o-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: -ms-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: linear-gradient(to bottom,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a1b20', endColorstr='#121314',GradientType=0 ) !important;
-    */
 }
 
 th, td {
@@ -296,7 +284,7 @@ th {
     height: 28px;
     width: 290px;
     line-height: 30px;
-    background-color: #121314;
+    background-color: #101112;/*#121314;*/
     color: #adafb2;
     border: none;
     padding-left: 10px;
@@ -317,7 +305,7 @@ th {
     height: 30px;
     line-height: 30px;
     padding-left: 10px;
-    background-color: #121314;
+    background-color: #101112;
     color: #adafb2;
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
@@ -415,10 +403,29 @@ th {
     line-height: 20px;
     margin-top: 5px;
     padding-left: 10px;
-    background-color: #121314;
+    background-color: #101112;
     color: #adafb2;
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     text-shadow: 1px 1px black;
     border-radius: 2.5px;
+}
+
+#irArriba {
+    width: auto;/**/
+    height: 30px;
+    line-height: 30px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10px;
+    text-shadow: 1px 1px black;
+    color: #adafb2;
+    text-align: center;
+}
+
+#irArriba:hover {
+    color: white;
+}
+
+#irArriba:active {
+    color: #FF9500;
 }
