--- a/css/styles.css
+++ b/css/styles.css
@@ -17,18 +17,6 @@ a {
     text-decoration: none !important;
 }
 
-/*
-#main_header {
-    position: fixed;
-    width: 100%;
-    height: 30px;
-    border-bottom: 1px solid #121314;
-    background-color: #222326;
-    z-index: 103;
-    text-align: center;
-    min-width: 1280px;
-}*/
-
 #main_header {
     position: fixed;
     width: 100%;
@@ -56,16 +44,6 @@ a {
     font-size: 10px;
     text-shadow: 1px 1px black;
 }
-
-/*
-#main_nav {
-    position: fixed;
-    width: auto;
-    height: 100%;
-    background-color: #222326;
-    z-index: 99;
-    padding-top: 31px;
-}*/
 
 #main_nav {
     position: fixed;
@@ -112,6 +90,7 @@ a {
 
 .main_nav_link_bloqueado, .main_nav_link_bloqueado:hover, .main_nav_link_bloqueado:active {
     color: #3e3e40 !important;
+    cursor: default;
 }
 
 .main_nav_link:hover {
@@ -119,7 +98,7 @@ a {
 }
 
 .main_nav_link:active {
-    color: #FF9500;
+    color: #FF7D00;
 }
 
 #contenedor {
@@ -131,25 +110,52 @@ a {
     margin-bottom: 31px;
 }
 
-#contenedor tr {
-    border-top: 1px solid #222326;
-}
-
-table {
+.dtable {
     border-collapse: collapse;
     width: 800px;
 }
 
-caption {
+.dcaption {
     height: 30px;
     line-height: 30px;
     font-family: 'Montserrat', sans-serif;
     font-size: 10px;
     text-shadow: 1px 1px black;
     color: #adafb2;
+    text-align: center;
 }
 
-th, td {
+.dtr {
+    border-top: 1px solid #222326;
+    margin-bottom: 10px;
+    /* Gradient */
+    background: rgb(26,27,32) !important;
+    background: -moz-linear-gradient(top,  rgba(26,27,32,1) 0%, rgba(18,19,20,1) 100%) !important;
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(26,27,32,1)), color-stop(100%,rgba(18,19,20,1))) !important;
+    background: -webkit-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
+    background: -o-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
+    background: -ms-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
+    background: linear-gradient(to bottom,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a1b20', endColorstr='#121314',GradientType=0 ) !important;
+}
+
+.dtrlink {
+    cursor: pointer;
+}
+
+.userConHover:hover > div {
+    color: white !important;
+}
+
+.userConHover:active > div {
+    color: #FF7D00 !important;
+}
+
+.userSinHover {
+    cursor: default !important;
+}
+
+.dth, .dtd {
     height: 30px;
     line-height: 30px;
     text-align: left;
@@ -158,31 +164,25 @@ th, td {
     font-size: 10px;
     text-shadow: 1px 1px black;
     color: #adafb2;
+    display: inline-block;
+    box-sizing: border-box;
 }
 
-th {
+.dth {
+    height: 30px;
+    line-height: 30px;
+    text-align: left;
+    padding-left: 10px;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 10px;
+    text-shadow: 1px 1px black;
+    color: #adafb2;
+    display: inline-block;
+    box-sizing: border-box;
     font-weight: normal;
-    /* Gradient */
-    background: rgb(26,27,32) !important;
-    background: -moz-linear-gradient(top,  rgba(26,27,32,1) 0%, rgba(18,19,20,1) 100%) !important;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(26,27,32,1)), color-stop(100%,rgba(18,19,20,1))) !important;
-    background: -webkit-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: -o-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: -ms-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: linear-gradient(to bottom,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a1b20', endColorstr='#121314',GradientType=0 ) !important;
 }
 
 #elementsList {
-    /* Gradient */
-    background: rgb(26,27,32) !important;
-    background: -moz-linear-gradient(top,  rgba(26,27,32,1) 0%, rgba(18,19,20,1) 100%) !important;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(26,27,32,1)), color-stop(100%,rgba(18,19,20,1))) !important;
-    background: -webkit-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: -o-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: -ms-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    background: linear-gradient(to bottom,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%) !important;
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a1b20', endColorstr='#121314',GradientType=0 ) !important;
 }
 
 .lb_text {
@@ -216,7 +216,7 @@ th {
 }
 
 .lb_button:active {
-    color: #FF9500;
+    color: #FF7D00;
 }
 
 #lb_background {
@@ -235,7 +235,6 @@ th {
 }
 
 #lb_container {
-    border: 1px solid #121314;
     display: none;
     z-index: 102;
     background-color: #222326;
@@ -244,6 +243,20 @@ th {
     position: fixed;
     top: 50%;
     left: 50%;
+    /**/
+    -webkit-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.5);
+    -moz-box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 0px 25px 0px rgba(0, 0, 0, 0.5);
+    /**/
+    border-top: 1px solid #222326;
+    background: rgb(26,27,32);
+    background: -moz-linear-gradient(top,  rgba(26,27,32,1) 0%, rgba(18,19,20,1) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(26,27,32,1)), color-stop(100%,rgba(18,19,20,1)));
+    background: -webkit-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    background: -o-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    background: -ms-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    background: linear-gradient(to bottom,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a1b20', endColorstr='#121314',GradientType=0 );
 }
 
 #lb_title {
@@ -255,13 +268,15 @@ th {
     font-size: 10px;
     text-shadow: 1px 1px black;
     color: #adafb2;
-}
-
-.lb_title_border {
-    height: 0px;
-    width: 100%;
-    border-bottom: 1px solid #121314;
-    margin: 0 auto;
+    /**/
+    background: rgb(26,27,32);
+    background: -moz-linear-gradient(top,  rgba(26,27,32,1) 0%, rgba(18,19,20,1) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(26,27,32,1)), color-stop(100%,rgba(18,19,20,1)));
+    background: -webkit-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    background: -o-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    background: -ms-linear-gradient(top,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    background: linear-gradient(to bottom,  rgba(26,27,32,1) 0%,rgba(18,19,20,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1a1b20', endColorstr='#121314',GradientType=0 );
 }
 
 #lb_content {
@@ -270,9 +285,6 @@ th {
 
 .lb_content_class {
     margin: 0 10px 10px 10px;
-    border-left: 1px solid #121314;
-    border-right: 1px solid #121314;
-    border-bottom: 1px solid #121314;
 }
 
 #lb_content_agregar, #lb_content_buscar {
@@ -284,7 +296,7 @@ th {
     height: 28px;
     width: 290px;
     line-height: 30px;
-    background-color: #101112;/*#121314;*/
+    background-color: #101112;
     color: #adafb2;
     border: none;
     padding-left: 10px;
@@ -312,14 +324,6 @@ th {
     text-shadow: 1px 1px black;
 }
 
-.lb_razon_option:hover {
-    color: white;
-}
-
-.lb_razon_option:active {
-    color: #FF9500;
-}
-
 .lb_razon_option_black {
     background-color: #0D0E0F !important;
 }
@@ -332,20 +336,31 @@ th {
     margin-top: 6px;
 }
 
-/* Log */
+.selectedReason {
+    cursor: default;
+}
 
-/*
-#log_container {
-    width: 100%;
-    z-index: 103;
-    position: fixed;
-    bottom: 0;
-    height: 30px;
-    background-color: #222326;
-    min-width: 1280px;
-    text-align: center;
-    border-top: 1px solid #121314;
-}*/
+.unselectedReason:hover {
+    cursor: pointer;
+}
+
+.unselectedReason:hover > div {
+    color: white !important;
+}
+
+.unselectedReason:active > div {
+    color: #FF7D00 !important;
+}
+
+.unselectedReason:hover > div div {
+    background-color: white !important;
+}
+
+.unselectedReason:active > div div {
+    background-color: #FF7D00 !important;
+}
+
+/* Log */
 
 #log_container {
     width: 100%;
@@ -391,7 +406,7 @@ th {
 }
 
 #log_text:active {
-    color: #FF9500;
+    color: #FF7D00;
 }
 
 .log_log {
@@ -411,8 +426,8 @@ th {
     border-radius: 2.5px;
 }
 
-#irArriba {
-    width: auto;/**/
+#infoSubirBajar {
+    width: auto;
     height: 30px;
     line-height: 30px;
     font-family: 'Montserrat', sans-serif;
@@ -420,12 +435,77 @@ th {
     text-shadow: 1px 1px black;
     color: #adafb2;
     text-align: center;
+    margin-top: -10px;
 }
 
-#irArriba:hover {
-    color: white;
+/* Botones para subir y bajar */
+
+#log_item_subir {
+    height: 20px;
+    width: 20px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 5px;
+    margin-right: 60px;
+    cursor: pointer;
+    background-image: url('/img/subir-default.png');
 }
 
-#irArriba:active {
-    color: #FF9500;
+#log_item_subir:hover {
+    background-image: url('/img/subir-hover.png');
+}
+
+#log_item_subir:active {
+    background-image: url('/img/subir-active.png');
+}
+
+.log_item_subir_activado {
+    background-image: url(/img/subir-false.png) !important;
+    cursor: default !important;
+}
+
+.log_item_subir_activado:hover {
+    background-image: url(/img/subir-false.png) !important;
+    cursor: default !important;
+}
+
+.log_item_subir_activado:active {
+    background-image: url(/img/subir-false.png) !important;
+    cursor: default !important;
+}
+
+#log_item_bajar {
+    height: 20px;
+    width: 20px;
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-bottom: 5px;
+    margin-right: 30px;
+    cursor: pointer;
+    background-image: url('/img/bajar-default.png');
+}
+
+#log_item_bajar:hover {
+    background-image: url('/img/bajar-hover.png');
+}
+
+#log_item_bajar:active {
+    background-image: url('/img/bajar-active.png');
+}
+
+.log_item_bajar_activado {
+    background-image: url(/img/bajar-false.png) !important;
+    cursor: default !important;
+}
+
+.log_item_bajar_activado:hover {
+    background-image: url(/img/bajar-false.png) !important;
+    cursor: default !important;
+}
+
+.log_item_bajar_activado:active {
+    background-image: url(/img/bajar-false.png) !important;
+    cursor: default !important;
 }
