--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ a {
     margin: 0 10px 10px 10px;
 }
 
-#lb_content_agregar, #lb_content_buscar {
+#lb_content_agregar, #lb_content_buscar, #lb_content_info {
     display: none;
 }
 
@@ -508,4 +508,10 @@ a {
 .log_item_bajar_activado:active {
     background-image: url('img/bajar-false.png') !important;
     cursor: default !important;
+}
+
+/* Summoner Info */
+
+#lb_summonerNameColor {
+    color: #FF7D00 !important;
 }
